# barber_booking_system

./: .env.example  .gitignore  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
app/: config.py  dependencies.py  main.py
app/api/v1/: appointments.py  auth.py  booking.py  customers.py  dashboard.py
app/core/: security.py  tokens.py
app/db/: session.py
app/models/: __init__.py  appointment.py  base.py  blocked_slot.py  customer.py  user.py
app/schemas/: appointment.py  customer.py
app/services/: appointment_service.py  customer_service.py  notification_service.py
app/templates/: base.html  booking.html  booking_base.html  booking_cancelled.html  booking_confirmation.html  booking_confirmed.html  dashboard.html  login.html
deploy/: barber.service  deploy.sh  nginx.conf
scripts/: create_barber.py
tests/: conftest.py  test_appointments.py  test_customers.py
