[project]
name = "barber-booking-system"
version = "0.1.0"
description = "Online appointment booking system for a barber shop"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",  # required for Form(...) in FastAPI
    # Auth
    "PyJWT>=2.8.0",            # JWT encode/decode
    "bcrypt>=4.0.0",           # password hashing
    # Notifications
    "boto3>=1.34.0",           # Amazon SES email
    # Production
    "psycopg2-binary>=2.9.9",  # PostgreSQL driver
    "gunicorn>=21.2.0",        # production process manager
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
